--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,3 +1,12 @@
 <section class="section">
   <div class="container">advantages</div>
 </section>
+<section class="section advantages">
+  <div class="container">
+    <ul class="advanages__list">
+      <li class="advantages__item"></li>
+      <li class="advantages__item"></li>
+      <li class="advantages__item"></li>
+    </ul>
+  </div>
+</section>
