Адаптация под велидатор (не все), якорные ссылки

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="section about">
+<section class="section about" id="about">
   <div class="container">
     <p class="section__subtitle about__label">tradition and love</p>
 
