--- a/src/partials/customer_reviews.html
+++ b/src/partials/customer_reviews.html
@@ -1,6 +1,7 @@
 <!-- Customer_Reviews -->
 
-<section class="section">
+<section class="section" id="customer_review">
+  <h2 class="visually-hidden">Customer Reviews</h2>
   <div class="conteiner wrapper">
     <input type="radio" name="point" id="slide1" checked />
     <input type="radio" name="point" id="slide2" />
