--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,4 +1,5 @@
-<section class="section gallery">
+<section class="section gallery" id="gallery">
+  <h2 class="visually-hidden">Our products</h2>
   <div class="container">
     <picture class="gallery__image">
       <source
