--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,4 +1,4 @@
-<section id="Contact" class="section contact-section">
+<section id="contact" class="section contact-section">
 
     <div class="container contact-container">
         
