--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer section">
+<footer class="footer section" id="footer">
   <div class="footer__top">
     <div class="container">
       <div class="footer__box">
