--- a/src/partials/hero_header.html
+++ b/src/partials/hero_header.html
@@ -1,25 +1,27 @@
 <section class="section hero">
   <header class="container header">
-    <img src="./images/logo.png" alt="логотип" class="logo" />
+    <a href="./index.html" >
+      <img src="./images/logo.png" alt="логотип" class="logo" />
+    </a>
     <div class="menu-container" id="menu-container" data-menu>
 
       <nav class="header-navigation">
 
         <ul class="header-navigation-list list">
           <li class="header-navigation-list-item">
-            <a href="" class="header-navigation-link__action">Home</a>
+            <a href="./index.html" class="header-navigation-link__action">Home</a>
           </li>
           <li class="header-navigation-list-item">
-            <a href="" class="header-navigation-link">About us</a>
+            <a href="#about" class="header-navigation-link">About us</a>
           </li>
           <li class="header-navigation-list-item">
             <a href="" class="header-navigation-link">How it’s made?</a>
           </li>
           <li class="header-navigation-list-item">
-            <a href="" class="header-navigation-link">Our products</a>
+            <a href="#gallery" class="header-navigation-link">Our products</a>
           </li>
           <li class="header-navigation-list-item">
-            <a href="" class="header-navigation-link">Contact</a>
+            <a href="#contact" class="header-navigation-link">Contact</a>
           </li>
         </ul>
       </nav>
