Исправление логотипа и добавление box-sizing: border-box

--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -33,9 +33,10 @@
 
 .logo {
   display: block;
+  // width: 199px;
 
   @include for-desktop {
-    margin-left: -69px;
+    transform: translateX(-69px);
   }
 }
 
