--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -18,3 +18,4 @@
 @import './layouts/contacts';
 @import './layouts/customer_reviews';
 @import './layouts/footer';
+@import './layouts/advantages';
