--- a/src/sass/utils/_vars.scss
+++ b/src/sass/utils/_vars.scss
@@ -3,6 +3,7 @@ $card-magrin: 30px;
 
 // брейкпоинты для экранов
 $phone-sz: 480px;
+$from-phone-to-tablet: 767px;
 $tablet-sz: 768px;
 $desktop-sz: 1200px;
 
@@ -20,7 +21,6 @@ $secondary-accent-color: #ffa5ba;
 
 $primary-body-color: #ffffff;
 $secondary-body-color: #fff5f6;
-
 
 $first-bg-color: #ffb8ca;
 $second-bg-color: #f0d1a5;
