--- a/src/sass/utils/_mixins.scss
+++ b/src/sass/utils/_mixins.scss
@@ -1,5 +1,5 @@
 // Миксин для набора карточек, задаем на список
-@mixin card-set-list ($num) {
+@mixin card-set-list($num) {
   display: flex;
   flex-wrap: wrap;
   margin-left: calc(#{$card-magrin} * -1);
@@ -20,8 +20,14 @@
   }
 }
 
+@mixin from-none-to-tablet {
+  @media screen and (max-width: $from-phone-to-tablet) {
+    @content;
+  }
+}
+
 @mixin from-phone-to-tablet {
-  @media screen and (max-width: $tablet-sz) {
+  @media screen and (min-width: $phone-sz) and (max-width: $from-phone-to-tablet) {
     @content;
   }
 }
