--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -21,3 +21,29 @@ h6,
 p {
   margin: 0;
 }
+
+.top {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  font-weight: 700;
+  color: $primary-accent-color;
+  bottom: 25px;
+  right: 25px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
+  z-index: 10;
+  background-color: rgba($color: #ffffff, $alpha: 0.5);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+
+  transition: background-color $transition-style;
+
+  &:hover {
+    background-color: rgba($color: #ffffff, $alpha: 1);
+  }
+}
