Мелкие правки в хиро

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,4 +1,4 @@
-<section class="section advantages">
+<section id="advantages" class="section advantages">
   <div class="container">
     <ul class="advantages__list list">
       <li class="advantages__item">
