--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -3,7 +3,7 @@
   background-color: $first-bg-color;
   background-image: url(../images/hero-header/ellipse_bg.svg);
   background-repeat: no-repeat;
-  background-position: 36px;
+  background-position: 25%;
 
   @include for-tablet {
     background-position: 75% 31px;
@@ -18,7 +18,7 @@
   position: relative;
   display: flex;
   align-items: center;
-  height: 100vh;
+  height: 500px;
 
   @include for-tablet {
     height: auto;
