--- a/src/sass/utils/_utils-classes.scss
+++ b/src/sass/utils/_utils-classes.scss
@@ -77,13 +77,9 @@
 
   @include for-tablet {
     max-width: $tablet-sz;
-    padding-left: 34px;
-    padding-right: 34px;
   }
   @include for-desktop {
     max-width: $desktop-sz;
-    padding-left: 115px;
-    padding-right: 115px;
   }
 }
 
@@ -176,5 +172,31 @@
   &:hover,
   &:focus {
     background-color: #ecebeb;
+  }
+}
+
+.top {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  font-weight: 700;
+  color: $primary-accent-color;
+  bottom: 25px;
+  right: 25px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
+  z-index: 10;
+  background-color: rgba($color: #ffffff, $alpha: 0.5);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+
+  transition: background-color $transition-style;
+
+  &:hover {
+    background-color: rgba($color: #ffffff, $alpha: 1);
   }
 }
