--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -2,7 +2,7 @@
     padding: 15px;
     width: 600px;
     font-size: 16px;
-    color: #000000;
+    color: red;
     &__title {
         margin-bottom: 20px;
         font-size: 20px;
