--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,14 +1,11 @@
 <header>
-      <div class="container">
-        <div class="hamburger-menu">
-          <h1 class="hamburger-menu__title">Классика права</h1>
-          <label class="hamburger-menu__button">
-            <input
-              class="hamburger-menu__checkbox visually-hidden"
-              type="checkbox"
-            />
-            <span class="hamburger-menu__icon"></span>
-          </label>
-        </div>
-      </div>
-    </header>
+  <div class="container">
+    <div class="hamburger-menu">
+      <h1 class="hamburger-menu__title">Классика права!!!</h1>
+      <label class="hamburger-menu__button">
+        <input class="hamburger-menu__checkbox visually-hidden" type="checkbox" />
+        <span class="hamburger-menu__icon"></span>
+      </label>
+    </div>
+  </div>
+</header>
