--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -442,6 +442,7 @@
   transform: rotate(-90deg);
 
   cursor: pointer;
+  // scroll-behavior: smooth;
 }
 
 // ============подробное описание продукта
