--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,4 +4,11 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './example';
+// @import './example';
+
+
+.menu__icon {
+    color:aqua;
+    fill: black;
+    border: 1 px solid red;
+}
