черновой вариант модалки для мобильной версии

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,5 +7,5 @@
 @import './example';
 @import './example';
 @import './example';
-@import './example';
-@import './example';
+@import './modal';
+@import './footer';
