--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,8 +4,10 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './example';
-@import './example';
-@import './example';
-@import './example';
-@import './example';
+// @import './example';
+// @import './example';
+// @import './example';
+// @import './example';
+// @import './example';
+
+@import './header';
