мобильная и планшетная версия готовы

--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,39 +1,47 @@
-<div class="modal">
-    <div>
-        <img class="modal__image" src="./images/modal_desktop.jpg" alt="1">
-    </div>
-    <h2 class="modal__title">A FISTFUL OF LEAD</h2>
-    <div class="modal__wrapper">
-        <ul class="modal__properties">
-            <li class="modal__item">Vote / Votes</li>
-            <li class="modal__item">Popularity</li>
-            <li class="modal__item">Original Title</li>
-            <li class="modal__item">Genre</li>
-        </ul>
-        <ul class="modal__values">
-            <li class="modal__item"> <span>7.3</span>/ 1260</li>
-            <li class="modal__item">100.2</li>
-            <li class="modal__item">A FISTFUL OF LEAD</li>
-            <li class="modal__item">Western</li>
-        </ul>
-    </div>
-    <p class="modal__subtitle">ABOUT</p>
-    <p class="modal__text">Four of the West’s most infamous outlaws assemble to steal a huge stash of gold from the most corrupt settlement of the
-    gold rush towns. But not all goes to plan one is killed and the other three escapes with bags of gold hide out in the
-    abandoned gold mine where they happen across another gang of three – who themselves were planning to hit the very same
-    bank! As tensions rise, things go from bad to worse as they realise the bags of gold are filled with lead... they’ve
-    been double crossed – but by who and how?</p>
-    <div class="modal__button-list">
-        <div>
-            <button type="submit" class="modal__button">ADD TO WATCHED</button>
+<!-- <div class="backdrop is-hidden"> -->
+    <div class="modal">
+        <div class="modal__thumb">
+            <img class="modal__image" src="./images/modal_desktop.jpg" alt="1">
         </div>
-        <div>
-            <button type="submit" class="modal__button">ADD TO QUEUE</button>
+        <div class="modal__info">
+            <h2 class="modal__title">A FISTFUL OF LEAD</h2>
+            <div class="modal__wrapper">
+                <ul class="modal__properties">
+                    <li class="modal__item">Vote / Votes</li>
+                    <li class="modal__item">Popularity</li>
+                    <li class="modal__item">Original Title</li>
+                    <li class="modal__item">Genre</li>
+                </ul>
+                <ul class="modal__values">
+                    <li class="modal__item"> <span class="modal__values--color">7.3</span>/ 1260</li>
+                    <li class="modal__item">100.2</li>
+                    <li class="modal__item">A FISTFUL OF LEAD</li>
+                    <li class="modal__item">Western</li>
+                </ul>
+            </div>
+            <p class="modal__subtitle">ABOUT</p>
+            <p class="modal__text">Four of the West’s most infamous outlaws assemble to steal a huge stash of gold from the most
+                corrupt settlement of the
+                gold rush towns. But not all goes to plan one is killed and the other three escapes with bags of gold hide out
+                in the
+                abandoned gold mine where they happen across another gang of three – who themselves were planning to hit the
+                very same
+                bank! As tensions rise, things go from bad to worse as they realise the bags of gold are filled with lead...
+                they’ve
+                been double crossed – but by who and how?</p>
+            <div class="modal__button-list">
+                <div>
+                    <button type="submit" class="modal__button">add to watched</button>
+                </div>
+                <div>
+                    <button type="submit" class="modal__button modal__button--active">add to queue</button>
+                </div>
+            </div>
+            <button class="button-close" data-modal-close>
+                <svg class="button-close--size">
+                    <use class="button-close--color" href="./images/icons.svg#icon-close"></use>
+                </svg>
+            </button>
         </div>
     </div>
-    <button class="button-close" data-modal-close>
-        <svg class="button-close--size">
-            <use class="button-close--color" href="./images/icons.svg#icon-close"></use>
-        </svg>
-    </button>
-</div>
+<!-- </div> -->
