--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -121,6 +121,9 @@ body {
   }
 
   @media screen and (min-width: 1024px) {
+    padding-top: 50px;
+    padding-left: 30px;
+    padding-right: 30px;
     min-width: 882px;
     min-height: 568px;
   }
@@ -131,42 +134,28 @@ body {
 }
 
 .modal__thumb {
-  //   margin-left: auto;
-  //   margin-right: auto;
   margin-bottom: 30px;
   width: 240px;
   height: 357px;
 
   @media screen and (min-width: 768px) {
-    display: inline;
     margin: 0;
     margin-right: 32px;
     width: 264px;
     height: 364px;
   }
+
+  @media screen and (min-width: 1024px) {
+    margin-right: 30px;
+    width: 396px;
+    height: 478px;
+  }
 }
 .modal__image {
-  //   margin-left: auto;
-  //   margin-right: auto;
-  //   margin-bottom: 30px;
-  //   width: 240px;
-  //   height: 357px;
   width: 100%;
   height: 100%;
   object-fit: cover;
   border-radius: 5px;
-
-  //   @media screen and (min-width: 768px) {
-  //     margin: 0;
-  //     margin-right: 32px;
-  //     width: 264px;
-  //     height: 364px;
-  //   }
-
-  //   @media screen and (min-width: 1024px) {
-  //     width: 396px;
-  //     height: 478px;
-  //   }
 }
 
 .modal__title {
@@ -176,8 +165,9 @@ body {
   font-size: 20px;
   line-height: 1.15;
 
-  @media screen and (min-width: 768px) {
-    margin-bottom: 20px;
+  @media screen and (min-width: 1024px) {
+    font-size: 30px;
+    line-height: 1.167;
   }
 }
 
@@ -196,6 +186,10 @@ body {
   line-height: 1.333;
 
   color: #8c8c8c;
+
+  @media screen and (min-width: 1024px) {
+    margin-right: 83px;
+  }
 }
 .modal__values {
   margin: 0;
@@ -230,6 +224,9 @@ body {
 
   @media screen and (min-width: 768px) {
     width: 264px;
+  }
+  @media screen and (min-width: 1024px) {
+    width: 396px;
   }
 }
 
@@ -301,6 +298,10 @@ body {
   @media screen and (min-width: 768px) {
     margin-right: 15px;
     width: 125px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    width: 136px;
   }
 }
 
