--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,7 +5,7 @@
 
 // Стили для файла с примером HTML-фрагмента
 @import './example';
-@import './example';
+@import './gallery';
 @import './example';
 @import './example';
 @import './example';
