--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -73,19 +73,19 @@ a {
     flex-wrap: wrap;
     margin-left: -30px;
     margin-top: -30px;
+    margin-bottom: 50px;
   }
 
   @media screen and (min-width: 1024px) {
-    margin-bottom: 46px;
   }
 }
 .film-card__item {
   width: 280px;
+  background-color: brown;
   @media screen and (min-width: 768px) {
     width: 293px;
     flex-basis: calc(100% / 2 - 30px);
     margin-left: 30px;
-    margin-top: 30px;
   }
   @media screen and (min-width: 1024px) {
     width: 274px;
@@ -137,4 +137,8 @@ a {
 }
 .film-info__genre {
   display: inline-block;
+}
+.pagination {
+  margin-left: auto;
+  margin-right: auto;
 }
