add margin cards

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -60,6 +60,68 @@
     
         </div>
     </li>
+
+
+
+    <li class="film-card__item">
+        <div class="thumb__card">
+            <a class="film-card__link" href=""><img src="" alt="" loading="lazy" /></a>
+        </div>
+        <div class="film-card__info">
+    
+            <p class="film-card__name">
+                GREYHOUND
+            </p>
+    
+            <ul class="genre-set">
+                <li class="film-info__genre">Drama</li>
+                <li class="film-info__genre">Comedy</li>
+            </ul>
+    
+            <b class="film-card__year">| 2019</b>
+    
+        </div>
+    </li>
+    
+    <li class="film-card__item">
+        <div class="thumb__card">
+            <a class="film-card__link" href=""><img src="" alt="" loading="lazy" /></a>
+        </div>
+        <div class="film-card__info">
+    
+            <p class="film-card__name">
+                GREYHOUND
+            </p>
+    
+            <ul class="genre-set">
+                <li class="film-info__genre">Drama</li>
+                <li class="film-info__genre">Comedy</li>
+            </ul>
+    
+            <b class="film-card__year">| 2019</b>
+    
+        </div>
+    </li>
+    
+    <li class="film-card__item">
+        <div class="thumb__card">
+            <a class="film-card__link" href=""><img src="" alt="" loading="lazy" /></a>
+        </div>
+        <div class="film-card__info">
+    
+            <p class="film-card__name">
+                GREYHOUND
+            </p>
+    
+            <ul class="genre-set">
+                <li class="film-info__genre">Drama</li>
+                <li class="film-info__genre">Comedy</li>
+            </ul>
+    
+            <b class="film-card__year">| 2019</b>
+    
+        </div>
+    </li>
 </ul>
 
 <p class="pagination">ПАГИНАЦИЯ</p>
