--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -79,14 +79,23 @@ a {
   @media screen and (min-width: 1024px) {
   }
 }
+.film-card__item:not(:last-child) {
+  @media screen and (min-width: 320px) {
+    margin-bottom: 20px;
+  }
+  @media screen and (min-width: 768px) {
+    margin-bottom: 0px;
+  }
+}
 .film-card__item {
   width: 280px;
-  background-color: brown;
+
   @media screen and (min-width: 768px) {
     width: 293px;
     flex-basis: calc(100% / 2 - 30px);
     margin-left: 30px;
     margin-top: 30px;
+    margin-bottom: 30px;
   }
   @media screen and (min-width: 1024px) {
     width: 274px;
@@ -94,10 +103,7 @@ a {
     margin-left: 30px;
   }
 }
-.film-card__item:not(:last-child) {
-  @media screen and (min-width: 768px) {
-  }
-}
+
 .thumb__card {
   height: 402px;
 
