--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -83,7 +83,13 @@ body {
   }
 }
 
-.backdrop.is-hidden {
+// .backdrop.is-hidden {
+//   visibility: hidden;
+//   opacity: 0;
+//   pointer-events: none;
+// }
+
+.is-hidden {
   visibility: hidden;
   opacity: 0;
   pointer-events: none;
@@ -91,6 +97,7 @@ body {
 
 .modal {
   position: absolute;
+  z-index: 997;
 
   top: 50%;
   left: 50%;
