--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,6 +4,7 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
+@import './styles';
 @import './header';
 @import './gallery';
 @import './modal';
