--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,281 +1,279 @@
 .page-header {
-    padding-top: 46px;
-    padding-bottom: 97px;
+  padding-top: 46px;
+  padding-bottom: 97px;
 
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
     url(./../images/header-img/mob.jpg);
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url(./../images/header-img/mob@2x.jpg);
+  }
+
+  @media screen and (min-width: 768px) {
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url(./../images/header-img/tab.jpg);
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-        url(./../images/header-img/mob@2x.jpg);
+      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+        url(./../images/header-img/tab@2x.jpg);
     }
+  }
 
-    @media screen and (min-width: 768px) {
-        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-        url(./../images/header-img/tab.jpg);
-        @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-            background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-            url(./../images/header-img/tab@2x.jpg);
-        }
+  @media screen and (min-width: 1024px) {
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url(./../images/header-img/desktop.jpg);
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+        url(./../images/header-img/desktop@2x.jpg);
     }
-    
-    @media screen and (min-width: 1024px) {
-        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-        url(./../images/header-img/desktop.jpg);
-        @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-            background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-            url(./../images/header-img/desktop@2x.jpg);
-        }
-    }
+  }
 }
 
-.container {
-    min-width: 320px;
-    max-width: 320px;
-    padding: 0 20px;
-    margin: 0 auto;
-  
-    @media screen and (min-width: 768px) {
-      max-width: 768px;
-      padding: 0 76px;
-    }
-  
-    @media screen and (min-width: 1024px) {
-      max-width: 1024px;
-      padding: 0 71px;
-    }
-}
+// .container {
+//     min-width: 320px;
+//     max-width: 320px;
+//     padding: 0 20px;
+//     margin: 0 auto;
+
+//     @media screen and (min-width: 768px) {
+//       max-width: 768px;
+//       padding: 0 76px;
+//     }
+
+//     @media screen and (min-width: 1024px) {
+//       max-width: 1024px;
+//       padding: 0 71px;
+//     }
+// }
 
 .page-header__nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
 }
 
 .logo__link {
-    text-decoration: none;
+  text-decoration: none;
 
-    @media screen and (min-width: 768px) {
-        display: block;
-    }
+  @media screen and (min-width: 768px) {
+    display: block;
+  }
 }
 
 .logo__icon {
-    width: 24px;
-    height: 24px;
+  width: 24px;
+  height: 24px;
 
-    @media screen and (min-width: 768px) {
-        margin-right: 10px;;
-    }
+  @media screen and (min-width: 768px) {
+    margin-right: 10px;
+  }
 }
 
 .logo__text {
-    display: none;
+  display: none;
 
-    @media screen and (min-width: 768px) {
-        display: inline;
-        text-decoration: none;
+  @media screen and (min-width: 768px) {
+    display: inline;
+    text-decoration: none;
 
-        font-weight: 500;
-        font-size: 30px;
-        line-height: 1.172;
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 1.172;
 
-        color: #FFFFFF;
-    }
+    color: #ffffff;
+  }
 }
 
 .page-header__nav-container {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .page-header__btn {
-    position: relative;
-    padding: 0;
-    background-color: transparent;
-    color: #FFFFFF;
-    border: none;
+  position: relative;
+  padding: 0;
+  background-color: transparent;
+  color: #ffffff;
+  border: none;
 
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 1.167;
-    text-transform: uppercase;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.167;
+  text-transform: uppercase;
 
-    &:not(:last-child) {
-        margin-right: 39px;
-    }
-
-    &:hover,
-    &:focus,
-    &.current {
-        &::after {
-            transform: scaleX(1);
-        }
+  &:not(:last-child) {
+    margin-right: 39px;
   }
 
+  &:hover,
+  &:focus,
+  &.current {
     &::after {
-        content: '';
-
-        position: absolute;
-        left: 0;
-        bottom: 1;
-
-        display: block;
-        width: 100%;
-        height: 3px;
-        background-color: #FF6B08;
-        border-radius: 2px;
-
-        transform: scaleX(0);
-        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      transform: scaleX(1);
     }
+  }
 
-    @media screen and (min-width: 768px) {
-        line-height: 1.172;
-    }
+  &::after {
+    content: '';
+
+    position: absolute;
+    left: 0;
+    bottom: 1;
+
+    display: block;
+    width: 100%;
+    height: 3px;
+    background-color: #ff6b08;
+    border-radius: 2px;
+
+    transform: scaleX(0);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  @media screen and (min-width: 768px) {
+    line-height: 1.172;
+  }
 }
 
 .form {
-    margin-top: 41px;
-    position: relative;
+  margin-top: 41px;
+  position: relative;
 
-    @media screen and (min-width: 768px) {
-        display: flex;
-        justify-content: center;
-    }
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: center;
+  }
 }
 
 .form__input {
-    width: 280px;
+  width: 280px;
 
-    text-decoration: none;
-    background-color: transparent;
-    color: #FFFFFF;
-    border: none;
-    border-bottom: 0.5px solid #FFFFFF;
+  text-decoration: none;
+  background-color: transparent;
+  color: #ffffff;
+  border: none;
+  border-bottom: 0.5px solid #ffffff;
 
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.172;
+
+  // Убирает синий крестик в поиске
+  &::-webkit-search-decoration,
+  &::-webkit-search-cancel-button,
+  &::-webkit-search-results-button,
+  &::-webkit-search-results-decoration {
+    display: none;
+  }
+
+  &::placeholder {
+    color: #ffffff;
+
+    font-family: 'Roboto';
     font-weight: 400;
     font-size: 14px;
     line-height: 1.172;
+  }
 
-    
-    // Убирает синий крестик в поиске
-    &::-webkit-search-decoration,
-    &::-webkit-search-cancel-button,
-    &::-webkit-search-results-button,
-    &::-webkit-search-results-decoration {
-        display: none;
-    }
+  &:hover,
+  &:focus {
+    outline: none;
+  }
 
-    &::placeholder {
-        color: #FFFFFF;
-
-        font-family: "Roboto";
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 1.172;
-    }
-
-    &:hover,
-    &:focus {
-        outline: none;
-    }
-
-    @media screen and (min-width: 768px) {
-        width: 336px;
-    }
+  @media screen and (min-width: 768px) {
+    width: 336px;
+  }
 }
 
 .form__icon {
-    position: absolute;
-    right: 0px;
+  position: absolute;
+  right: 0px;
 
-    @media screen and (min-width: 768px) {
-        right: 140px;
-    }
+  @media screen and (min-width: 768px) {
+    right: 140px;
+  }
 
-    @media screen and (min-width: 1024px) {
-        right: 273px;
-    }
+  @media screen and (min-width: 1024px) {
+    right: 273px;
+  }
 }
-
 
 // Замена фона для библиотеки
 
 .library-header {
-    padding-bottom: 65px;
+  padding-bottom: 65px;
 
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
     url(./../images/header-img/library-mob.jpg);
-    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-        url(./../images/header-img/library-mob@2x.jpg);
-    }
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url(./../images/header-img/library-mob@2x.jpg);
+  }
 
-    @media screen and (min-width: 768px) {
-        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-        url(./../images/header-img/library-tab.jpg);
-        @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-            background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-            url(./../images/header-img/library-tab@2x.jpg);
-        }
+  @media screen and (min-width: 768px) {
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url(./../images/header-img/library-tab.jpg);
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+        url(./../images/header-img/library-tab@2x.jpg);
     }
-    
-    @media screen and (min-width: 1024px) {
-        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-        url(./../images/header-img/library-desk.jpg);
-        @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-            background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-            url(./../images/header-img/library-desk@2x.jpg);
-        }
+  }
+
+  @media screen and (min-width: 1024px) {
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url(./../images/header-img/library-desk.jpg);
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+        url(./../images/header-img/library-desk@2x.jpg);
     }
+  }
 }
 
 // Кнопки на вкладке Библиотека
 
 .library-nav {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 49px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 49px;
 
-    @media screen and (min-width: 768px) {
-        margin-top: 45px;
-        justify-content: center;
-    }
+  @media screen and (min-width: 768px) {
+    margin-top: 45px;
+    justify-content: center;
+  }
 }
 
 .is-hidden {
-    display: none;
+  display: none;
 }
 
 .library-nav__btn {
-    padding-top: 14px;
-    padding-bottom: 12px;
-    width: 128px;
+  padding-top: 14px;
+  padding-bottom: 12px;
+  width: 128px;
 
-    background-color: transparent;
-    color: #FFFFFF;
-    border: 1px solid #FFFFFF;
-    border-radius: 5px;
+  background-color: transparent;
+  color: #ffffff;
+  border: 1px solid #ffffff;
+  border-radius: 5px;
 
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 1.333;
-    text-transform: uppercase;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.333;
+  text-transform: uppercase;
 
-    &:hover,
-    &:focus,
-    &.current {
-        background-color: #FF6B01;
-        border: 1px solid #FF6B01;
+  &:hover,
+  &:focus,
+  &.current {
+    background-color: #ff6b01;
+    border: 1px solid #ff6b01;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 136px;
+
+    &:not(:last-child) {
+      margin-right: 15px;
     }
-
-    @media screen and (min-width: 768px) {
-        width: 136px;
-
-        &:not(:last-child) {
-            margin-right: 15px;
-        }
-    }
+  }
 }
