fix card in gallery

--- a/src/templates/film-card.hbs
+++ b/src/templates/film-card.hbs
@@ -7,14 +7,15 @@
     <div class="film-card__info">
 
         <p class="film-card__name">
-            ONCE UPON A TIME... IN HOLLYWOOD
+            {{}}
         </p>
       
-            <ul class="genre-set">
-                {{#each name-property}}
-                   <span class="film-info_genre">{{genre}}</span>
-                {{/each}} 
-            </ul>
+                <ul class="genre-set">
+                    {{#each name-property}}
+                    <li class="film-info__genre">{{genre}}</li>  
+                    {{/each}}
+                </ul>
+           
     <span class="film-card_year">{{year}}</span>
     </div>
 </li>
