--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -103,7 +103,12 @@ a {
     margin-left: 30px;
   }
 }
-
+.film-card__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 5px;
+}
 .thumb__card {
   height: 402px;
 
@@ -120,6 +125,7 @@ a {
   font-size: 12px;
   line-height: 1.166;
   letter-spacing: normal;
+  text-transform: uppercase;
 
   color: #000000;
 }
@@ -127,7 +133,7 @@ a {
   display: inline-block;
 }
 .film-info__genre,
-.film-card__year {
+.film-card__release {
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
