--- a/src/templates/film-card.hbs
+++ b/src/templates/film-card.hbs
@@ -2,21 +2,21 @@
 {{#each this}}
 <li class="film-card__item">
     <div class="thumb__card">
-        <a class="film-card-link" href=""><img src="" alt="" loading="lazy" /></a>
+        <a class="film-card__link" href="{{backdrop_path}}"><img class="film-card__img" src="{{poster_path}}" alt="{{title}}" loading="lazy" /></a>
     </div>
     <div class="film-card__info">
 
         <p class="film-card__name">
-            {{}}
+            {{title}}
         </p>
       
                 <ul class="genre-set">
-                    {{#each name-property}}
-                    <li class="film-info__genre">{{genre}}</li>  
-                    {{/each}}
+                    
+                    <li class="film-info__genre">{{genre_ids}}</li>  
+                   
                 </ul>
            
-    <span class="film-card_year">{{year}}</span>
+    <span class="film-card__release">| {{release_date}}</span>
     </div>
 </li>
 {{/each}}
