--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -79,6 +79,7 @@ a {
   @media screen and (min-width: 1024px) {
   }
 }
+
 .film-card__item:not(:last-child) {
   @media screen and (min-width: 320px) {
     margin-bottom: 20px;
@@ -89,7 +90,7 @@ a {
 }
 .film-card__item {
   width: 280px;
-
+  cursor: pointer;
   @media screen and (min-width: 768px) {
     width: 293px;
     flex-basis: calc(100% / 2 - 30px);
@@ -102,6 +103,9 @@ a {
     flex-basis: calc(100% / 3 - 30px);
     margin-left: 30px;
   }
+}
+.film-card__link {
+  cursor: pointer;
 }
 .film-card__img {
   width: 100%;
