add class for rating by marckup card

--- a/src/templates/film-card.hbs
+++ b/src/templates/film-card.hbs
@@ -18,6 +18,7 @@
         </ul>
 
         <span class="film-card__release">| {{release_date}}</span>
+        <span class="film-card__rating is-hidden">| {{vote_average}}</span>
     </div></a>
 </li>
 {{/each}}
