bug fix url done

--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -342,6 +342,8 @@ body.modal-open {
 
   transition: color 250ms $timing-fn;
 
+  fill: #000000;
+
   //   @media screen and (min-width: 320px) {
   //     top: 10px;
   //     right: 10px;
@@ -360,9 +362,9 @@ body.modal-open {
     box-shadow: 0 0 0 1px #ff6b01;
   }
 
-  &--color {
-    fill: #000000;
-  }
+  // &--color {
+  //   fill: #000000;
+  // }
 
   &--size {
     width: 30px;
