--- a/src/templates/modal.hbs
+++ b/src/templates/modal.hbs
@@ -1,5 +1,9 @@
 <div class='modal__thumb'>
-  <img class='modal__image' src='{{poster_path}}' alt='{{title}}' />
+  <img
+    class='modal__image'
+    src='https://image.tmdb.org/t/p/original{{poster_path}}'
+    alt='{{title}}'
+  />
 </div>
 
 <div class='modal__info'>
