--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,7 +4,5 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './example';
 @import './base/common.scss';
-@import './layout/gallery'
-
+@import './layout/gallery';
