Добавил базовые утилиты и кнопку как компоненту

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,6 +3,15 @@
  * Все паршалы подключаются сюда.
  */
 
-// Стили для файла с примером HTML-фрагмента
+// base
 @import './base/common.scss';
+
+//components
+@import './components/button';
+
+//layout
 @import './layout/gallery';
+
+//utils
+@import './utils/body-lock';
+@import './utils/visually-hidden';
