code review changes

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,8 +11,8 @@
       <a class="main-header-library-ancor" href="#">library</a>
     </div>
     <div class="library-navigation">
-      <button class="library-wached-button">Watched</button>
-      <button class="library-queue-button">queue</button>
+      <button class="btn-library watched">Watched</button>
+      <button class="btn-library queue">queue</button>
     </div>
 
     <form>
