--- a/src/sass/layout/_header-styles.scss
+++ b/src/sass/layout/_header-styles.scss
@@ -210,7 +210,15 @@ a {
     left: 884px;
   }
 }
-
+.library-navigation {
+  margin: auto;
+  display: flex;
+  padding: 10px;
+}
+.watched,
+.queue {
+  margin: 10px;
+}
 .main-haeder-overlay {
   margin: auto;
   width: 320px;
