--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,7 +5,6 @@
 
 // Стили для файла с примером HTML-фрагмента
 
-@import './header-styles';
 // base
 @import './base/common.scss';
 
@@ -13,6 +12,7 @@
 @import './components/button';
 
 //layout
+@import './layout/header-styles';
 @import './layout/gallery';
 
 //utils
