--- a/src/sass/layout/_header-styles.scss
+++ b/src/sass/layout/_header-styles.scss
@@ -3,8 +3,14 @@ img {
   max-width: 100%;
   height: auto;
 }
-a {
-  text-decoration: none;
+
+.firs-page-header {
+  @media screen and(max-width: 767px) {
+    margin-bottom: 20px;
+  }
+  @media screen and(min-width: 768px) {
+    margin-bottom: 60px;
+  }
 }
 
 .main-navigation {
@@ -14,14 +20,21 @@ a {
   padding-right: 20px;
   padding-bottom: 20px;
   display: flex;
+  @media screen and(min-width: 768px) and (max-width: 1023px) {
+    padding-left: 71px;
+    padding-right: 71px;
+  }
+  @media screen and(min-width: 1024px) {
+    padding-left: 71px;
+    padding-right: 75px;
+  }
 }
-.main-header-library-ancor {
+.main-header-library-anchor {
   font-family: Roboto;
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
   line-height: 14px;
-
   display: flex;
   align-items: center;
   text-align: center;
@@ -30,7 +43,7 @@ a {
   color: #ffffff;
 }
 
-.main-header-home-ancor {
+.main-header-home-anchor {
   margin-right: 39px;
   font-family: Roboto;
   font-style: normal;
@@ -45,20 +58,22 @@ a {
 }
 
 .main-header-navigation {
-  margin-right: auto;
+  margin-right: 112px;
+  @media screen and(min-width: 768px) and (max-width: 1023px) {
+    display: inline-flex;
+    align-items: baseline;
+    margin-right: 304px;
+  }
+  @media screen and(min-width: 1024px) {
+    display: inline-flex;
+    align-items: baseline;
+    margin-right: 564px;
+  }
 }
 
 .film-icon {
-  // position: absolute;
   width: 24px;
   height: 24px;
-
-  //left: 21px;
-  // top: 46px;
-
-  @media screen and(min-width: 768px) and (max-width: 1023px) {
-    // left: 71px;
-  }
 }
 
 .search-icon {
@@ -66,22 +81,20 @@ a {
   border-bottom: 0.5px solid #ffffff;
   width: 15px;
   height: 15px;
-  //left: 288px;
-  //top: 115px;
-  @media screen and(min-width: 768px) and (max-width: 1023px) {
-    left: 539px;
-    top: 115px;
-  }
-  @media screen and(min-width: 1024px) {
-    left: 667px;
-    top: 115px;
-  }
 }
 
 .search-form {
   padding: 20px;
   display: flex;
   align-items: flex-end;
+  @media screen and(min-width: 768px) and (max-width: 1023px) {
+    padding-left: 216px;
+    padding-right: 216px;
+  }
+  @media screen and(min-width: 1024px) {
+    padding-left: 344px;
+    padding-right: 344px;
+  }
 }
 
 .film-search-input {
@@ -89,7 +102,6 @@ a {
   background: none;
   border: none;
   border-bottom: 0.5px solid #ffffff;
-  //position: absolute;
   width: 280px;
 
   font-family: Roboto;
@@ -102,20 +114,12 @@ a {
 
   color: #ffffff;
 
-  // left: 20px;
-  // top: 133px;
   @media screen and(min-width: 768px) and (max-width: 1023px) {
     width: 336px;
-
-    left: 216px;
-    top: 133px;
   }
 
   @media screen and(min-width: 1024px) {
     width: 336px;
-
-    left: 344px;
-    top: 133px;
   }
 }
 
@@ -124,12 +128,12 @@ a {
 }
 
 .header-logo {
-  //position: absolute;
   width: 141px;
   height: 35px;
-  //left: 105px;
-  // top: 41px;
 
+  padding-top: 3px;
+  padding-bottom: 3px;
+  padding-left: 10px;
   font-family: Roboto;
   font-style: normal;
   font-weight: 500;
@@ -141,7 +145,6 @@ a {
 
   color: #ffffff;
   @media screen and (max-width: 767px) {
-    //position: absolute;
     width: 1px;
     height: 1px;
     margin: 1px;
@@ -152,19 +155,15 @@ a {
   }
 }
 
-.main-header-home-ancor {
-  //position: absolute;
+.main-header-home-anchor {
   width: 35px;
   height: 14px;
-  // left: 157px;
-  // top: 58px;
 
   font-family: Roboto;
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
   line-height: 14px;
-  /* identical to box height */
 
   display: flex;
   align-items: center;
@@ -172,29 +171,14 @@ a {
   text-transform: uppercase;
 
   color: #ffffff;
-
-  @media screen and(min-width: 768px) and (max-width: 1023px) {
-    left: 549px;
-  }
-
-  @media screen and(min-width: 1024px) {
-    left: 810px;
-  }
 }
 
-.main-header-library-ancor {
-  // position: absolute;
-  width: 69px;
-  height: 14px;
-  left: 231px;
-  top: 58px;
-
+.main-header-library-anchor {
   font-family: Roboto;
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
   line-height: 14px;
-  /* identical to box height */
 
   display: flex;
   align-items: center;
@@ -202,29 +186,28 @@ a {
   text-transform: uppercase;
 
   color: #ffffff;
-
-  @media screen and(min-width: 768px) and (max-width: 1023px) {
-    left: 623px;
-  }
-  @media screen and(min-width: 1024px) {
-    left: 884px;
-  }
 }
 .library-navigation {
   margin: auto;
   display: flex;
   padding: 10px;
+  @media screen and(min-width: 768px) and (max-width: 1023px) {
+    margin-left: 241px;
+    margin-right: 240px;
+  }
+  @media screen and(min-width: 1024px) {
+    margin-left: 369px;
+    margin-right: 368px;
+  }
 }
 .watched,
 .queue {
   margin: 10px;
 }
-.main-haeder-overlay {
+.main-header-overlay {
   margin: auto;
   width: 320px;
   height: 230px;
-  //left: 0px;
-  //top: 0px;
   background: rgba(0, 0, 0, 0.56);
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
     url(../images/main_header_mobile.jpg);
@@ -241,6 +224,29 @@ a {
     height: 230px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
       url(../images/main_header_desktop.jpg);
+  }
+}
+
+.library-haeder-overlay {
+  margin: auto;
+  width: 320px;
+  height: 230px;
+  background: rgba(0, 0, 0, 0.56);
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+    url(../images/library_header_mobile.jpg);
+
+  @media screen and(min-width: 768px) and (max-width: 1023px) {
+    width: 768px;
+    height: 230px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url(../images/library_header_tablet.jpg);
+  }
+
+  @media screen and(min-width: 1024px) {
+    width: 1024px;
+    height: 230px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url(../images/library_header_tablet.jpg);
   }
 }
 
