--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
 <header class="firs-page-header">
-  <div class="main-haeder-overlay">
+  <div class="main-header-overlay" id="header">
     <div class="main-navigation">
       <a class="main-header-navigation" href="#">
         <svg class="film-icon" width="24px" height="24px">
@@ -7,16 +7,16 @@
         </svg>
         <span class="header-logo">Filmoteka</span>
       </a>
-      <a class="main-header-home-ancor" href="#">home</a>
-      <a class="main-header-library-ancor" href="#">library</a>
+      <a class="main-header-home-anchor" id="home-navigatiom-btn" href="#">home</a>
+      <a class="main-header-library-anchor" id="library-navigation-btn" href="#">my library</a>
     </div>
-    <div class="library-navigation">
+    <div class="library-navigation is-hiden">
       <button class="btn-library watched">Watched</button>
       <button class="btn-library queue">queue</button>
     </div>
 
     <form>
-      <div class="search-form is-hiden">
+      <div class="search-form">
         <input type="text" class="film-search-input" placeholder="Поиск фильмов" />
         <svg class="search-icon">
           <use href="./images/symbol-defs.svg#icon-search"></use>
