--- a/src/partials/modal-window.html
+++ b/src/partials/modal-window.html
@@ -10,47 +10,51 @@
       <div class="modal__img-wrap">
         <img src="./images/test-img.jpg" alt="" />
       </div>
-      <h2 class="modal__title">A fistful of lead</h2>
-      <ul class="modal__list-info">
-        <li class="modal__list-item">
-          <div class="modal__left-column">
-            <span class="modal__list-span">Vote</span>
-            <span class="modal__list-span">/</span>
-            <span class="modal__list-span">Votes</span>
-          </div>
-          <div class="modal__right-column">
-            <span class="modal__list-span--bg">7.3</span>
-            <span class="modal__list-span">/</span>
-            <span class="modal__list-span--bg">1260</span>
-          </div>
-        </li>
-        <li class="modal__list-item">
-          <div class="modal__left-column">Popularity</div>
-          <div class="modal__right-column">100.2</div>
-        </li>
-        <li class="modal__list-item">
-          <div class="modal__left-column">Original Title</div>
-          <div class="modal__right-column">A FISTFULL OF LEAD</div>
-        </li>
-        <li class="modal__list-item">
-          <div class="modal__left-column">Genre</div>
-          <div class="modal__right-column">Western</div>
-        </li>
-      </ul>
-      <div class="modal__description">
-        <h3 class="modal__description-title">ABOUT</h3>
-        <p class="modal__description-text">
-          Four of the West’s most infamous outlaws assemble to steal a huge stash of gold from the
-          most corrupt settlement of the gold rush towns. But not all goes to plan one is killed and
-          the other three escapes with bags of gold hide out in the abandoned gold mine where they
-          happen across another gang of three – who themselves were planning to hit the very same
-          bank! As tensions rise, things go from bad to worse as they realise the bags of gold are
-          filled with lead... they’ve been double crossed – but by who and how?
-        </p>
-      </div>
-      <div class="modal__buttons">
-        <button type="button" class="btn-in-modal" data-func="watched">add to watched</button>
-        <button type="button" class="btn-in-modal" data-func="queue">add to queue</button>
+      <div class="modal__text-content">
+        <h2 class="modal__title">A fistful of lead</h2>
+        <ul class="modal__list-info list">
+          <li class="modal__list-item">
+            <div class="modal__left-column">
+              <span class="modal__list-span">Vote</span>
+              <span class="modal__list-span">/</span>
+              <span class="modal__list-span">Votes</span>
+            </div>
+            <div class="modal__right-column">
+              <span class="modal__list-span--bg-vote">7.3</span>
+              <span class="modal__list-span">/</span>
+              <span class="modal__list-span--bg-votes">1260</span>
+            </div>
+          </li>
+          <li class="modal__list-item">
+            <div class="modal__left-column">Popularity</div>
+            <div class="modal__right-column">100.2</div>
+          </li>
+          <li class="modal__list-item">
+            <div class="modal__left-column">Original Title</div>
+            <div class="modal__right-column">
+              <span class="modal__original-title">A FISTFULL OF LEAD</span>
+            </div>
+          </li>
+          <li class="modal__list-item">
+            <div class="modal__left-column">Genre</div>
+            <div class="modal__right-column"><span class="modal__movie-genre">Western</span></div>
+          </li>
+        </ul>
+        <div class="modal__description">
+          <h3 class="modal__description-title">ABOUT</h3>
+          <p class="modal__description-text">
+            Four of the West’s most infamous outlaws assemble to steal a huge stash of gold from the
+            most corrupt settlement of the gold rush towns. But not all goes to plan one is killed
+            and the other three escapes with bags of gold hide out in the abandoned gold mine where
+            they happen across another gang of three – who themselves were planning to hit the very
+            same bank! As tensions rise, things go from bad to worse as they realise the bags of
+            gold are filled with lead... they’ve been double crossed – but by who and how?
+          </p>
+        </div>
+        <div class="modal__buttons">
+          <button type="button" class="btn-in-modal" data-func="watched">add to watched</button>
+          <button type="button" class="btn-in-modal" data-func="queue">add to queue</button>
+        </div>
       </div>
     </div>
     <button type="button" class="modal__button" data-action="close-modal"></button>
