--- a/src/sass/layout/_modal-window.scss
+++ b/src/sass/layout/_modal-window.scss
@@ -1,77 +1,200 @@
 /* Modal window */
 .modal {
   display: flex;
-  align-items: center;
   justify-content: center;
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   opacity: 0;
   pointer-events: none;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   padding: 20px;
+  @media screen and (min-width: 768px) and (max-width: 1023px) {
+    // align-items: center;
+    padding: 0;
+  }
+
+  &.is-open {
+    opacity: 1;
+    pointer-events: initial;
+  }
+  &__overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+  &__content {
+    background-color: #ffffff;
+
+    // transform: scale(0.95);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    position: relative;
+    overflow-y: auto;
+  }
+  &.is-open &__content {
+    transform: scale(1);
+  }
+  &__button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 30px;
+    height: 30px;
+    padding: 0;
+    margin: 0;
+    border: none;
+    border-radius: 50%;
+    background-color: transparent;
+    color: #fff;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    outline: none;
+    background-image: url('../images/icon-close.svg');
+    background-position: center;
+    background-size: 60%;
+    background-repeat: no-repeat;
+    &:hover,
+    &:focus {
+      background-color: rgba(0, 0, 0, 0.5);
+    }
+  }
+
+  // стили для шаблона в модальном окне
+  &__card {
+    // .modal__card
+    padding: 48px 20px 40px 20px;
+    @media screen and (min-width: 768px) and (max-width: 1023px) {
+      width: 618px;
+      height: 562px;
+    }
+  }
+
+  &__img-wrap {
+    // .modal__img-wrap
+    width: 240px;
+    height: 357px;
+    & img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+
+  &__title {
+    // .modal__title
+    font-size: 20px;
+    line-height: 1.15;
+    text-transform: uppercase;
+
+    color: #000000;
+
+    margin-top: 30px;
+    @media screen and (min-width: 768px) and (max-width: 1023px) {
+      color: red;
+    }
+  }
+
+  &__list-info {
+    // .modal__list-info
+    margin-top: 20px;
+  }
+
+  &__list-item {
+    // .modal__list-item
+    display: flex;
+    &:not(:last-child) {
+      margin-bottom: 10px;
+    }
+  }
+
+  &__left-column {
+    // .modal__left-column
+    flex-basis: 108px;
+    font-size: 12px;
+    line-height: 1.33;
+    color: #8c8c8c;
+  }
+
+  &__list-span {
+    // .modal__list-span
+  }
+
+  &__right-column {
+    // .modal__right-column
+    font-size: 12px;
+    line-height: 1.17;
+    text-transform: uppercase;
+    text-align: left;
+    color: #000000;
+  }
+
+  &__list-span--bg-vote,
+  &__list-span--bg-votes {
+    // .modal__list-span--bg-vote
+    // .modal__list-span--bg-votes
+    display: inline-block;
+    width: 36px;
+    height: 16px;
+    border-radius: 5px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+  }
+  &__list-span--bg-vote {
+    // .modal__list-span--bg-vote
+    background-color: #ff6b01;
+    color: #ffffff;
+  }
+  &__list-span--bg-votes {
+    // .modal__list-span--bg-votes
+    background-color: #f7f7f7;
+  }
+  &__original-title {
+    // .modal__original-title
+    line-height: 1.33;
+  }
+  &__movie-genre {
+    // .modal__movie-genre
+    text-transform: capitalize;
+  }
+
+  &__description {
+    // .modal__description
+    margin-top: 20px;
+  }
+
+  &__description-title {
+    // .modal__description-title
+    font-size: 12px;
+    line-height: 1.33;
+    text-transform: uppercase;
+    color: #000000;
+  }
+
+  &__description-text {
+    // .modal__description-text
+    font-size: 12px;
+    line-height: 1.67;
+    color: #000000;
+    margin-top: 10px;
+  }
+
+  &__buttons {
+    // .modal__buttons
+    margin-top: 21px;
+    display: flex;
+    justify-content: space-between;
+  }
 }
-
-.modal.is-open {
-  opacity: 1;
-  pointer-events: initial;
-}
-
-.modal__overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-.modal__content {
-  //   width: 100%;
-  background-color: #ffffff;
-
-  transform: scale(0.95);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  position: relative;
-  overflow-y: scroll;
-}
-
-.modal.is-open .modal__content {
-  transform: scale(1);
-}
-
-.modal__button {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 30px;
-  height: 30px;
-  padding: 0;
-  margin: 0;
-  border: none;
-  border-radius: 50%;
-  background-color: transparent;
-  color: #fff;
-  cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  outline: none;
-  background-image: url('../images/icon-close.svg');
-  background-position: center;
-  background-size: 60%;
-  background-repeat: no-repeat;
-}
-
-.modal__button:hover,
-.modal__button:focus {
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-.modal__card {
-  padding: 48px 20px 40px 20px;
+.btn-in-modal {
 }
