--- a/src/sass/layout/_modal-window.scss
+++ b/src/sass/layout/_modal-window.scss
@@ -12,8 +12,8 @@
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   padding: 20px;
-  @media screen and (min-width: 768px) and (max-width: 1023px) {
-    // align-items: center;
+  @media screen and (min-width: 768px) {
+    align-items: center;
     padding: 0;
   }
 
@@ -36,9 +36,18 @@
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     position: relative;
     overflow-y: auto;
+
+    @media screen and (min-width: 768px) {
+      width: 618px;
+      height: 562px;
+    }
   }
   &.is-open &__content {
     transform: scale(1);
+  }
+  &__text-content {
+    flex-basis: 264px;
+    margin-left: 32px;
   }
   &__button {
     position: absolute;
@@ -72,9 +81,9 @@
   &__card {
     // .modal__card
     padding: 48px 20px 40px 20px;
-    @media screen and (min-width: 768px) and (max-width: 1023px) {
-      width: 618px;
-      height: 562px;
+    @media screen and (min-width: 768px) {
+      display: flex;
+      padding: 42px 30px 40px 28px;
     }
   }
 
@@ -82,11 +91,15 @@
     // .modal__img-wrap
     width: 240px;
     height: 357px;
+    @media screen and (min-width: 768px) {
+      width: 264px;
+      height: 374px;
+    }
     & img {
       display: block;
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: center;
     }
   }
 
@@ -99,8 +112,8 @@
     color: #000000;
 
     margin-top: 30px;
-    @media screen and (min-width: 768px) and (max-width: 1023px) {
-      color: red;
+    @media screen and (min-width: 768px) {
+      margin-top: 0;
     }
   }
 
