--- a/src/sass/layout/_modal-window.scss
+++ b/src/sass/layout/_modal-window.scss
@@ -41,13 +41,23 @@
       width: 618px;
       height: 562px;
     }
+    @media screen and (min-width: 1024px) {
+      width: 882px;
+      height: 568px;
+    }
   }
   &.is-open &__content {
     transform: scale(1);
   }
   &__text-content {
-    flex-basis: 264px;
-    margin-left: 32px;
+    @media screen and (min-width: 768px) {
+      flex-basis: 264px;
+      margin-left: 32px;
+    }
+    @media screen and (min-width: 1024px) {
+      flex-basis: 396px;
+      margin-left: 30px;
+    }
   }
   &__button {
     position: absolute;
@@ -85,6 +95,9 @@
       display: flex;
       padding: 42px 30px 40px 28px;
     }
+    @media screen and (min-width: 1024px) {
+      padding: 50px 30px 40px 30px;
+    }
   }
 
   &__img-wrap {
@@ -94,6 +107,10 @@
     @media screen and (min-width: 768px) {
       width: 264px;
       height: 374px;
+    }
+    @media screen and (min-width: 1024px) {
+      width: 396px;
+      height: 478px;
     }
     & img {
       display: block;
@@ -114,6 +131,10 @@
     margin-top: 30px;
     @media screen and (min-width: 768px) {
       margin-top: 0;
+    }
+    @media screen and (min-width: 1024px) {
+      font-size: 30px;
+      line-height: 1.166;
     }
   }
 
@@ -207,6 +228,10 @@
     margin-top: 21px;
     display: flex;
     justify-content: space-between;
+    @media screen and (min-width: 1024px) {
+      justify-content: start;
+      gap: 15px;
+    }
   }
 }
 .btn-in-modal {
