--- a/src/sass/layout/_modal-window.scss
+++ b/src/sass/layout/_modal-window.scss
@@ -34,7 +34,6 @@
 
     // transform: scale(0.95);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    position: relative;
     overflow-y: auto;
 
     @media screen and (min-width: 768px) {
@@ -45,6 +44,9 @@
       width: 882px;
       height: 568px;
     }
+  }
+  &__content-wrap {
+    position: relative;
   }
   &.is-open &__content {
     transform: scale(1);
