--- a/src/sass/layout/_modal-window.scss
+++ b/src/sass/layout/_modal-window.scss
@@ -12,6 +12,7 @@
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   padding: 20px;
+  overflow-y: auto;
   @media screen and (min-width: 768px) {
     align-items: center;
     padding: 0;
@@ -92,6 +93,7 @@
   // стили для шаблона в модальном окне
   &__card {
     // .modal__card
+    overflow-y: auto;
     padding: 48px 20px 40px 20px;
     @media screen and (min-width: 768px) {
       display: flex;
