--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,6 +15,7 @@
 @import './layout/header-styles';
 @import './layout/gallery';
 @import './layout/modal-window';
+@import './layout/footer';
 
 //utils
 @import './utils/body-lock';
