--- a/src/sass/layout/_header-styles.scss
+++ b/src/sass/layout/_header-styles.scss
@@ -30,11 +30,11 @@ img {
   }
 }
 .main-header-library-anchor {
-  font-family: Roboto;
+  font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
-  line-height: 14px;
+  line-height: 1, 17px;
   display: flex;
   align-items: center;
   text-align: center;
@@ -45,11 +45,11 @@ img {
 
 .main-header-home-anchor {
   margin-right: 39px;
-  font-family: Roboto;
+  font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
-  line-height: 14px;
+  line-height: 1.17;
   display: flex;
   align-items: center;
   text-align: center;
@@ -104,11 +104,11 @@ img {
   border-bottom: 0.5px solid #ffffff;
   width: 280px;
 
-  font-family: Roboto;
+  font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 1.14;
   display: flex;
   align-items: center;
 
@@ -134,11 +134,11 @@ img {
   padding-top: 3px;
   padding-bottom: 3px;
   padding-left: 10px;
-  font-family: Roboto;
+  font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 30px;
-  line-height: 35px;
+  line-height: 1.17;
   display: flex;
   align-items: center;
   text-align: center;
@@ -159,11 +159,11 @@ img {
   width: 35px;
   height: 14px;
 
-  font-family: Roboto;
+  font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
-  line-height: 14px;
+  line-height: 1.17;
 
   display: flex;
   align-items: center;
@@ -174,11 +174,11 @@ img {
 }
 
 .main-header-library-anchor {
-  font-family: Roboto;
+  font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
-  line-height: 14px;
+  line-height: 1.17;
 
   display: flex;
   align-items: center;
@@ -250,6 +250,45 @@ img {
   }
 }
 
+.main-header-home-anchor,
+.main-header-library-anchor {
+  display: inline-block;
+  color: #ffffff;
+  line-height: 1;
+  text-decoration: none;
+  cursor: pointer;
+}
+.main-header-home-anchor::after,
+.main-header-library-anchor::after {
+  background-color: #ff6b08;
+  display: block;
+  content: '';
+  height: 3px;
+  border-radius: 2px;
+  width: 0%;
+  -webkit-transition: width 0.4s ease-in-out;
+  -moz--transition: width 0.4s ease-in-out;
+  transition: width 0.4s ease-in-out;
+}
+a:hover:after,
+a:focus:after {
+  width: 100%;
+}
+.error-message {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.14;
+  align-items: center;
+  text-align: center;
+
+  color: #ff001b;
+}
 .is-hiden {
   display: none;
 }
