--- a/src/sass/layout/_header-styles.scss
+++ b/src/sass/layout/_header-styles.scss
@@ -34,7 +34,7 @@ img {
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
-  line-height: 1, 17px;
+  line-height: 1.17;
   display: flex;
   align-items: center;
   text-align: center;
