--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -16,6 +16,7 @@
 @import './layout/gallery';
 @import './layout/modal-window';
 @import './layout/footer';
+@import './layout/movie-cards';
 
 //utils
 @import './utils/body-lock';
