--- a/src/templates/movie-card.hbs
+++ b/src/templates/movie-card.hbs
@@ -1,16 +1,18 @@
 <li class="movies__item" data-id="{{id}}">
-    <img src='https://image.tmdb.org/t/p/original{{poster}}' alt="{{name}}" loading="lazy"
+    <img class="movie-poster" src='https://image.tmdb.org/t/p/original{{poster}}' alt="{{name}}" loading="lazy"
         width='274px' heigth='398px' />
     <div class="info">
-        <p class="info-item">
+        <p class="info-name">
             <b>{{name}}</b>
         </p>
-        <p class="info-item">
+        <div class="info-location">
+           <p class="info-genre">
             <b>{{genre}}</b>
-        </p>
-        <p class="info-item">
+           </p>
+           <p class="info-relise">
             <b>{{relise}}</b>
-        </p>
+           </p>
+        </div> 
 
     </div>
 </li>
